# Dataflow_architecture

./: .gitignore  CMakeLists.txt  Device.hpp  README.md  a.out  add-mul-verify.cpp  add.cpp  add_mul.cpp  compare.py  conv_dfa_dnnl.cc  device.h  device.hpp  inference_without_split.py  mat_mul.cpp  mul-verify.cpp
